syntax = "proto3";

package merlin.transformers.feast;

option go_package = "github.com/gojek/merlin/pkg/transformers/feast/spec";

message RequestParsing {
    string project = 1;
    repeated Entity entities = 2;
    repeated Feature features = 3;
}

message Entity {
    string name = 1;
    string valueType = 2;
    string jsonPath = 3;
}

message Feature {
    string name = 1;
    double defaultValue = 2;
}
